@@ -26,6 +26,7 @@
 #||pages-wildcard.weebly.com^
 #||phicdn.net^
 ||00000255123135324.ml^
+||029482.shop^
 ||0857online.net
 ||10goneviral.com^
 ||11467.com^
@@ -46,6 +47,7 @@
 ||1af8ezx.asia^
 ||2013unique.com.tw^
 ||2022wangcai.com^
+||22web.org^
 ||2447hthty.com^
 ||277sy.com^
 ||2mqpupjy3.store^
@@ -107,6 +109,7 @@
 ||ad-specs.guoshipartners.com^
 ||ad.setn.com^
 ||adsv.svc.litv.tv^
+||aemdx.com^
 ||afeifuturesdiary.com^
 ||affinaddict.digital^
 ||affutures.com^
@@ -124,6 +127,7 @@
 ||alliancesmartlogistics.com^
 ||allyouwant666.com^
 ||alphaloan.co^
+||altoops.com^
 ||alvinb.club^
 ||always.baby^
 ||amazon24.mobi^
@@ -266,6 +270,7 @@
 ||clearited.shop^
 ||clevelandmusicians.com^
 ||clickfunnels.com^
+||clplapa.com^
 ||cmecoins.life^
 ||co2e6bnr.^
 ||codshoppy.com^
@@ -360,6 +365,7 @@
 ||e81.org^
 ||easywebinar.live^
 ||eaupoch.cn^
+||ecgh.xyz^
 ||ecomironman.com^
 ||ecrossinglab.com^
 ||ecspeedy.com^
@@ -371,6 +377,7 @@
 ||ee1899.com^
 ||ee2021.com^
 ||eeamall.com^
+||eeids.top^
 ||eerrr.asia^
 ||efxgs.com^
 ||eiegov.com^
@@ -404,6 +411,7 @@
 ||ethen.buzz^
 ||etherue.com^
 ||ethpz.com^
+||etrades.info^
 ||etreqiog.com^
 ||euxtoken.com^
 ||ewin.godaddysites.com^
@@ -441,9 +449,11 @@
 ||ffffgame.com^
 ||fghjkd.com^
 ||fgov.shop^
+||financialive.com^
 ||fine-art.ge^
 ||firr-store.com^
 ||firstrade.com^
+||firstrande.com^
 ||fixekea.live^
 ||fixku.com^
 ||fjxhwk.shop^
@@ -489,6 +499,7 @@
 ||gddr.xyz^
 ||gdf999.com^
 ||gdfb.shop^
+||geamua.com^
 ||gemu08.com^
 ||genesisquantify.com^
 ||getleaguevip.buzz^
@@ -501,6 +512,7 @@
 ||ggthxptw.com^
 ||giikin.com^
 ||gioesp.shop^
+||globalm88.top^
 ||gmarket8.shop^
 ||gnfdc.shop^
 ||godcup.me^
@@ -549,12 +561,17 @@
 ||gzjuning.com^
 ||gzjysd.com^
 ||hagjjrtw.com^
+||haldiramcontact.com^
 ||hardlywcoxpr.com^
 ||hass.win^
 ||hazz.win^
 ||hcuwc.shop^
 ||hdgala.online^
 ||hdhno.shop^
+||hdjr.ink^
+||hdue.homes^
+||hdue.shop^
+||hdue.wiki^
 ||healthy001.top^
 ||healthy007.top^
 ||heartbeatw.com^
@@ -601,6 +618,7 @@
 ||hublaud.com^
 ||humanflies.xyz^
 ||husevon.com^
+||huwnll.com^
 ||huwwzzas.shop^
 ||hw111.net^
 ||hw16555.net^
@@ -628,6 +646,7 @@
 ||incoolyo.com^
 ||indiastock.club^
 ||infinitytraffic.net^
+||inldtw.shop^
 ||inloe1xf.vip^
 ||insin.com.tw^
 ||instabo.cc^
@@ -637,7 +656,6 @@
 ||investing-reads.com^
 ||invinciblestock.top^
 ||ios-protector.com^
-||iouson.shop^
 ||iouson.shop^
 ||ip.ophe.im^
 ||ipfs.io^
@@ -654,6 +672,7 @@
 ||jackpresident.com.tw^
 ||jajpholdings.lt.acemlnb.com^
 ||jauty.shop^
+||jcwufo.shop^
 ||jdcgov.com^
 ||jdf88.com^
 ||jfgvb.shop^
@@ -730,7 +749,6 @@
 ||ko.gl^
 ||ko1788.com^
 ||koogo.shop^
-||koogo.shop^
 ||koohll.shop^
 ||kopitiv.com^
 ||kp-apk.com^
@@ -774,6 +792,7 @@
 ||livekl.top^
 ||liwzzxisds.shop^
 ||lkjvbn.com^
+||llld.shop^
 ||loan588.cc^
 ||loan588.com^
 ||loihdr.vip^
@@ -870,6 +889,7 @@
 ||naturefc.com.hk^
 ||nbatop50.com^
 ||nbsunvuim.com^
+||nbvxf.top^
 ||ne3ky.com^
 ||needer.shop^
 ||needfunpartner.me^
@@ -877,6 +897,7 @@
 ||netfllx.weebly.com^
 ||netfltiw.com^
 ||newsoftwarereview.com^
+||newstockshow.life^
 ||newtradetw.site^
 ||nhscf2x.xyz^
 ||nianfall.com^
@@ -899,6 +920,7 @@
 ||oahdf.live^
 ||oaklawnsoccerclub.org^
 ||obtlebor.com^
+||oc178.com^
 ||odesrn.com^
 ||odfmny.xyz^
 ||odmqq.asia^
@@ -922,6 +944,7 @@
 ||onlineprotool.com^
 ||onlinerichmkt.com^
 ||oovgov.com^
+||oplalssa.shop^
 ||oppiuuhh.store^
 ||opticalilusion.com^
 ||opvaasa.shop^
@@ -1021,6 +1044,7 @@
 ||richslash.com^
 ||rie.vtrgov.com^
 ||rinsr.vip^
+||rioopl.shop^
 ||rjnnbaw.vip^
 ||rm16888.com^
 ||rose2011kt.taplink.ws^
@@ -1112,6 +1136,7 @@
 ||stejaw.online^
 ||stock499.com^
 ||stockbooks.xyz^
+||stocker-tw.com^
 ||stocking01.com^
 ||stockinvincible.top^
 ||stockszxy.live^
@@ -1172,6 +1197,7 @@
 ||theonering.net^
 ||thevisualisation.fr^
 ||thinkmediakaik.vip^
+||thom-browne.com.tw^
 ||tianxi-i.online^
 ||tickmill.com^
 ||tickmill.online^
@@ -1192,6 +1218,7 @@
 ||touzixuetan.com^
 ||track-post-gov-tw.info^
 ||track-post-tw.com^
+||tracks-parcels.com^
 ||tradeepro.space^
 ||traderoadtw.com^
 ||traderoadultimate.com^
@@ -1230,6 +1257,7 @@
 ||twcaijin.fan^
 ||twcaijin.online^
 ||twcdq.me^
+||twcostco.shop^
 ||twcrpytoacademy.com^
 ||twdongsen.shop^
 ||twdsmc.com^
@@ -1291,6 +1319,7 @@
 ||user132794.psee.io^
 ||ussaisosad.shop^
 ||utube.tw^
+||uuuio.shop^
 ||uvvgov.com^
 ||uxcia.com^
 ||uyl.buzz^
@@ -1338,11 +1367,13 @@
 ||wayshop.site^
 ||wbze.de^
 ||wdaq-tw.cn^
+||wdcexchange.com^
 ||wdsdm.asia^
 ||wealthpress98951.lt.acemlnb.com^
 ||web01.me^
 ||webube.com^
 ||weeklywinningluckydayextra.cyou^
+||weetlove.com^
 ||weikh.shop^
 ||weily.com.tw^
 ||weilyyeh.com.tw^
@@ -1429,6 +1460,7 @@
 ||youdp.shop^
 ||youlove2chat.com^
 ||younit6.com^
+||youqu198.me^
 ||yp298.vip^
 ||yqbz2.xyz^
 ||yqsfss.shop^
@@ -1443,6 +1475,7 @@
 ||yukai.ceo^
 ||yuutoday.com^
 ||yuyanwz.com^
+||ywhf9zl3.com^
 ||yxp8.cn^
 ||yyds999.com.tw^
 ||yydsy.shop^
@@ -1450,6 +1483,7 @@
 ||z6r.cn^
 ||zabeeo.com^
 ||zasdasd.club^
+||zbotu.xyz^
 ||zdesm.asia^
 ||zdhwe.asia^
 ||zdknvok2208.com^
