@@ -1,5 +1,9 @@
 # 歷史更新 History Update
 
+* 20230423 Update
+  * 更新 個人不想看的廣告或網站
+  * 調整 LineBot
+
 * 20230422 Update
   * 更新 165反詐騙公告網址(112/4/11-112/4/17民眾通報假投資(博弈)詐騙網站)
   * 更新 個人不想看的廣告或網站
